# FirstJenkins

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt  main.cpp
add/: CMakeLists.txt  calc_add.cpp
apps/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt
cmake/: Documentation.cmake
docs/: 1_Doxyfile___2  ____Doxyfile____
includes/: calc_add.hpp  calc_mul.hpp  calc_square.hpp  calc_sub.hpp  my_lib.hpp
mul/: CMakeLists.txt  calc_mul.cpp
square/: CMakeLists.txt  calc_square.cpp
src/: CMakeLists.txt  my_lib.cpp
sub/: CMakeLists.txt  calc_sub.cpp
tests/: CMakeLists.txt  main.cpp
